--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
+    "@primevue/themes": "^4.2.5",
+    "@tailwindcss/vite": "^4.0.3",
+    "@types/pg": "^8.11.11",
+    "db0": "^0.2.3",
     "nuxt": "^3.15.4",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.2.5",
+    "sequelize": "^6.37.5",
+    "sequelize-cli": "^6.6.2",
+    "tailwindcss": "^4.0.3",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@primevue/nuxt-module": "^4.2.5"
   }
 }
