--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@primevue/themes": "^4.2.5",
     "@tailwindcss/vite": "^4.0.3",
     "@types/pg": "^8.11.11",
+    "bcryptjs": "^2.4.3",
     "db0": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "nuxt": "^3.15.4",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
