Adjust configuration to deploy demo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:13
@@ -12,6 +10,25 @@ services:
       - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      recipe-book-network: {}
+
+  app:
+    build: .
+    container_name: recipe-book-demo
+    environment:
+      NUXT_POSTGRES_URL: ${NUXT_POSTGRES_URL}
+      NUXT_JWT_SECRET: ${NUXT_JWT_SECRET}
+    ports:
+      - '3000:3000'
+    depends_on:
+      - postgres
+    networks:
+      recipe-book-network: {}
 
 volumes:
   postgres_data:
+
+networks:
+  recipe-book-network:
+    external: true
